# docs/swagger.json
@@ -140,9 +140,6 @@
         "dto.CreateVehicleRequest": {
             "type": "object",
             "properties": {
-                "created_at": {
-                    "type": "string"
-                },
                 "location": {
                     "type": "string"
                 },
@@ -154,9 +151,6 @@
                 },
                 "price": {
                     "type": "integer"
-                },
-                "updated_at": {
-                    "type": "string"
                 },
                 "year": {
                     "type": "integer"
